--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage":"https://github.com/ADAM-AMAZIANE/CC1-react.git",
+  "homepage":"https://ADAM-AMAZIANE.github.io/CC1-react/",
   "name": "router",
   "version": "0.1.0",
   "private": true,
